research interest added

--- a/index.html
+++ b/index.html
@@ -83,25 +83,45 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content">
         <p class="font-weight-normal"> <h3> Hey there! </h3> 
           I'm an undergraduate student at Delhi Technological University (DTU), pursuing a B.Tech degree in Software Engineering. My skillset includes experience in data structure & algorithms, front-end development, UI/UX design and machine learning. I also have a passion for photography, videography and reading books. With a diverse set of technical and creative skills, I'm eager to apply my knowledge to tackle new challenges and make meaningful contributions. 
-          <br> <hr> </p>
-        <div class="row">
-          <div class="col-lg-6">
-            <ul>
-            <li> <i class="icofont-rounded-right"></i> <strong>Email:</strong> dhrubadattaanjan@gmail.com </li>
-            <li> <i class="icofont-rounded-right"></i> <strong>Birthdate:</strong> 25 February, 2000 </li>
-            <li> <i class="icofont-rounded-right"></i> <strong>Current Address:</strong> New Delhi, India </li>
-            <li> <i class="icofont-rounded-right"></i> <strong>Hometown:</strong> Dhaka, Bangladesh </li>
-            </ul>
-          </div>
-          <div class="col-lg-6">
-            <ul>
-            <li> <i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 70445***** </li>
-            <li> <i class="icofont-rounded-right"></i> <strong>Major:</strong> Software Engineering </li>
-            <li> <i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor in Technology (B.Tech) </li>
-            <li> <i class="icofont-rounded-right"></i> <strong>University:</strong> Delhi Technological University </li>
-            </ul>
-          </div>
-        </div>
+         </p> <br>
+         <div class="row">
+           <div class="col-lg-6">
+             <ul>
+             <li> <i class="icofont-rounded-right"></i> <strong>Email:</strong> dhrubadattaanjan@gmail.com </li>
+             <li> <i class="icofont-rounded-right"></i> <strong>Birthdate:</strong> 25 February, 2000 </li>
+             <li> <i class="icofont-rounded-right"></i> <strong>Current Address:</strong> New Delhi, India </li>
+             <li> <i class="icofont-rounded-right"></i> <strong>Hometown:</strong> Dhaka, Bangladesh </li>
+             </ul>
+           </div>
+           <div class="col-lg-6">
+             <ul>
+             <li> <i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 70445***** </li>
+             <li> <i class="icofont-rounded-right"></i> <strong>Major:</strong> Software Engineering </li>
+             <li> <i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor in Technology (B.Tech) </li>
+             <li> <i class="icofont-rounded-right"></i> <strong>University:</strong> Delhi Technological University </li>
+             </ul>
+           </div>
+         </div>
+         <hr>
+         <p class="font-weight-normal"> <h3>Research Interest: </h3> </p>
+         <div class="row">
+           <div class="col-lg-6">
+             <ul>
+             <li> <i class="icofont-rounded-right"></i> Artificial intelligence and machine learning </li>
+             <li> <i class="icofont-rounded-right"></i> Natural language processing </li>
+             <li> <i class="icofont-rounded-right"></i> Internet of Things (IoT) </li>
+             <li> <i class="icofont-rounded-right"></i> Deep Learning </li>
+             </ul>
+           </div>
+           <div class="col-lg-6">
+             <ul>
+             <li> <i class="icofont-rounded-right"></i> Data Analytics </li>
+             <li> <i class="icofont-rounded-right"></i> Computer Vision </li>
+             <li> <i class="icofont-rounded-right"></i> Blockchain technology </li>
+             <li> <i class="icofont-rounded-right"></i> Human-computer interaction </li>
+             </ul>
+           </div>
+         </div>
         </div>
         </div>
         </div>
