--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
            </div>
          </div>
          <hr>
-         <p class="font-weight-normal"> <h3>Research Interest: </h3> </p>
+         <p class="font-weight-normal"> <h3>Research Interest </h3> </p>
          <div class="row">
            <div class="col-lg-6">
              <ul>
