--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
     <section id="portfolio" class="portfolio section-bg">
       <div class="container" data-aos="fade-up">
         <div class="section-title">
-          <h2>My Recent Works</h2>
+          <h2>Recent Works</h2>
         </div>
         <div class="row">
           <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
@@ -500,16 +500,38 @@
               </div>
               <div class="text-center"> <a href="mailto:dhrubadattaanjan@gmail.com" target="_blank" class="btn mail"
                   role="button" aria-disabled="true"><span> Get In Touch</span> </a> </div>
-            </div>
+            </div> <br>
           </div>
-          <div class="col-lg-8 mt-5 mt-lg-0">
-            <div class="address">
-              <h3 class="icofont-google-map h3 text-info"> Find me on Google Map: </h3>
-              <hr />
+
+          <div class="col-lg-8">
+            <h4><em><strong>Updates: </strong></em></h4>
+            <hr>
+            <div class="row">
+              <div class="col-lg-12 col-md-12 icon-box" data-aos="fade-up">
+                <div class="icon"><i class="bi bi-card-text"></i></div>
+
+                <p class="description"><em>[18.09.2022]</em> </p>
+                <h5 class="title">
+                  My portfolio got ranked on Google.
+                  <em><a
+                      href="https://www.google.com/search?q=dhruba+datta&rlz=1C1BNSD_enBD976BD976&oq=dhruba+datta&aqs=chrome.0.69i59j35i39j0i10i22i30j69i65l2j69i60j69i65.2690j0j7&sourceid=chrome&ie=UTF-8"
+                      target="_blank">[check here]</a></em>
+                </h5> <br>
+
+                <p class="description"><em>[10.06.2022]</em> </p>
+                <h5 class="title">
+                  More than 500 people have joined my discord server for coding-related help and guidance.
+                  <em><a href="https://discord.gg/zazf3BgJK7" target="_blank">[join server]</a></em>
+                </h5> <br>
+
+                <p class="description"><em>[14.07.2019]</em> </p>
+                <h5 class="title">
+                  Obtained an offer letter from ICCR to complete my undergraduate studies at Delhi Technological
+                  University.
+                </h5> <br>
+
+              </div>
             </div>
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27983.99623832572!2d77.11988060582824!3d28.749430997305065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d01212a67c965%3A0x87d470ca1c30d1b0!2sDelhi%20Technological%20University!5e0!3m2!1sen!2sbd!4v1622707025558!5m2!1sen!2sbd"
-              frameborder="0" style="border:0;width:100%;height:310px" allowfullscreen></iframe>
           </div>
         </div>
       </div>
