--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             class="bx bxl-instagram"></i></a>
         <a href="https://www.youtube.com/DhrubaDattaAnjan" target="_blank" class="youtube"><i
             class="bx bxl-youtube"></i></a>
-        <a href="https://t.me/dhrubzzz" target="_blank" class="telegram"><i class="bx bxl-telegram"></i></a>
+        <a href="https://t.me/dhruba_datta_anjan" target="_blank" class="telegram"><i class="bx bxl-telegram"></i></a>
       </div>
     </div>
   </section>
