for future updare in about section!!

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             class="bx bxl-instagram"></i></a>
         <a href="https://www.youtube.com/DhrubaDattaAnjan" target="_blank" class="youtube"><i
             class="bx bxl-youtube"></i></a>
-        <a href="https://t.me/dhruba_datta_anjan" target="_blank" class="telegram"><i class="bx bxl-telegram"></i></a>
+        <a href="https://t.me/dhrubzzz" target="_blank" class="telegram"><i class="bx bxl-telegram"></i></a>
       </div>
     </div>
   </section>
@@ -105,6 +105,7 @@
             design and machine learning. I also have a passion for photography, videography and reading books. With a
             diverse set of technical and creative skills, I'm eager to apply my knowledge to tackle new challenges and
             make meaningful contributions.
+            <!-- I have completed my Bachelor's degree in Software Engineering from Delhi Technological University (DTU). -->
             </p> <br>
             <div class="row">
               <div class="col-lg-6">
