address & phone no updated

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li> <i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 70445***** </li>
+                  <li> <i class="icofont-rounded-right"></i> <strong>Phone:</strong> +880 17032***** </li>
                   <li> <i class="icofont-rounded-right"></i> <strong>Major:</strong> Software Engineering </li>
                   <li> <i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor in Technology (B.Tech)
                   </li>
@@ -489,7 +489,7 @@
             <div class="info">
               <div class="address"> <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>DTU Boys Hostel, Rohini, Delhi</p>
+                <p>Dhaka, Bangladesh</p>
               </div>
               <div class="email"> <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
@@ -497,7 +497,7 @@
               </div>
               <div class="phone"> <i class="icofont-phone"></i>
                 <h4>Call:</h4>
-                <p>+91 70445*****</p>
+                <p>+880 17032*****</p>
               </div>
               <div class="text-center"> <a href="mailto:dhrubadattaanjan@gmail.com" target="_blank" class="btn mail"
                   role="button" aria-disabled="true"><span> Get In Touch</span> </a> </div>
