beautified mentor description

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
               <h4>Mentor</h4>
               <h5>December 2018 - July 2019</h5>
               <p> <em>Dhaka, Bangladesh</em> </p>
-              <p>While applying for higher education, I assisted high school students of 10th and 12th grade in subjects
+              <p>While applying for higher education, I assisted high school students of 10<sup>th</sup> and 12<sup>th</sup> grade in subjects
                 including Maths, Physics, and ICT. </p>
             </div>
             <div class="resume-item">
