--- a/index.html
+++ b/index.html
@@ -552,8 +552,7 @@
         <a href="https://www.instagram.com/dhrubz_/" target="_blank" class="instagram"><i
             class="bx bxl-instagram"></i></a>
         <a href="https://twitter.com/dhruba_anjan" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="https://www.facebook.com/dhruba.datta.anjan" target="_blank" class="facebook"><i
-            class="bx bxl-facebook"></i></a>
+        <a href="https://medium.com/@dhruba-datta" target="_blank" class="medium"><i class="bx bxl-medium"></i></a>
         <hr>
       </div>
       <div class="copyright">MyPortfolio &copy; 2023 | by <a href="https://bootstrapmade.com"
