--- a/index.html
+++ b/index.html
@@ -546,8 +546,8 @@
       <h5>Feel free to reach me out on any of these platforms </h5><br>
       <div class="social-links">
         <hr>
-        <a href="https://www.linkedin.com/in/dhruba-datta/" target="_blank" class="linkedin"><i
-            class="bx bxl-linkedin"></i></a>
+        <a href="https://www.facebook.com/dhruba.datta.anjan" target="_blank" class="facebook"><i
+            class="bx bxl-facebook"></i></a>
         <a href="https://discord.gg/zazf3BgJK7" target="_blank" class="discord"> <i class='bx bxl-discord'></i> </a>
         <a href="https://www.instagram.com/dhrubz_/" target="_blank" class="instagram"><i
             class="bx bxl-instagram"></i></a>
