--- a/index.html
+++ b/index.html
@@ -330,12 +330,12 @@
             <div class="resume-item">
               <h4>Achievements</h4>
               <ul>
-                <li>Recipient of Indian Council for Cultural Relations Government Scholarship, provides cost-free
+                <li>Recipient of Indian Council for Cultural Relations  <b>Government Scholarship</b>, provides cost-free
                   education & monthly stipend. </li>
-                <li>Having a personal portfolio ranked on Google. </li>
-                <li>LeetCode Reputation of 2.8K+ with over 150K+ views. </li>
-                <li>Awarded certificates of excellence in the "DRMC National Science Festival" and "SGHS Inter School
-                  Science Festival". </li>
+                <li>Having a personal portfolio  <b>ranked on Google</b>. </li>
+                <li>LeetCode Reputation of  <b>2.8K+ </b> with over  <b>150K+ </b> views. </li>
+                <li>Awarded certificates of excellence in the "<b>DRMC National Science Festival</b>" and "<b>SGHS Inter School
+                  Science Festival</b>". </li>
               </ul>
             </div>
           </div>
