--- a/index.html
+++ b/index.html
@@ -330,11 +330,11 @@
             <div class="resume-item">
               <h4>Achievements</h4>
               <ul>
-                <li>Recipient of Indian Council for Cultural Relations  <b>Government Scholarship</b>, provides cost-free
+                <li>Recipient of Indian Council for Cultural Relations  <b style="color: rgba(46, 56, 64, 0.936);">Government Scholarship</b>, provides cost-free
                   education & monthly stipend. </li>
-                <li>Having a personal portfolio  <b>ranked on Google</b>. </li>
-                <li>LeetCode Reputation of  <b>2.8K+ </b> with over  <b>150K+ </b> views. </li>
-                <li>Awarded certificates of excellence in the "<b>DRMC National Science Festival</b>" and "<b>SGHS Inter School
+                <li>Having a personal portfolio  <b style="color: rgba(46, 56, 64, 0.936);">ranked on Google</b>. </li>
+                <li>LeetCode Reputation of  <b style="color: rgba(46, 56, 64, 0.936);">2.8K+ </b> with over  <b style="color: rgba(46, 56, 64, 0.936);">150K+ </b> views. </li>
+                <li>Awarded certificates of excellence in the "<b style="color: rgba(46, 56, 64, 0.936);">DRMC National Science Festival</b>" and "<b style="color: rgba(46, 56, 64, 0.936);">SGHS Inter School
                   Science Festival</b>". </li>
               </ul>
             </div>
