--- a/temp.html
+++ b/temp.html
@@ -64,12 +64,12 @@
               <h3 class="resume-title">Achievements</h3>
               <div class="resume-item">
                 <ul>
-                  <li>Recipient of Indian Council for Cultural Relations Government Scholarship, provides cost-free
+                  <li>Recipient of Indian Council for Cultural Relations  <b style="color: rgba(46, 56, 64, 0.936);">Government Scholarship</b>, provides cost-free
                     education & monthly stipend. </li>
-                  <li>Having a personal portfolio ranked on Google. </li>
-                  <li>LeetCode Reputation of 2.8K+ with over 150K+ views. </li>
-                  <li>Awarded certificates of excellence in the "DRMC National Science Festival" and "SGHS Inter School
-                    Science Festival". </li>
+                  <li>Having a personal portfolio  <b style="color: rgba(46, 56, 64, 0.936);">ranked on Google</b>. </li>
+                  <li>LeetCode Reputation of  <b style="color: rgba(46, 56, 64, 0.936);">2.8K+ </b> with over  <b style="color: rgba(46, 56, 64, 0.936);">150K+ </b> views. </li>
+                  <li>Awarded certificates of excellence in the "<b style="color: rgba(46, 56, 64, 0.936);">DRMC National Science Festival</b>" and "<b style="color: rgba(46, 56, 64, 0.936);">SGHS Inter School
+                    Science Festival</b>". </li>
                 </ul>
               </div>
             </div>
