--- a/temp.html
+++ b/temp.html
@@ -46,16 +46,16 @@
               <div class="resume-item">
                 <ul>
                   <li> 
-                    <em> Conference: </em> Dhruba Datta, Harsh Prakash, Priya Singh, <b> Skin Cancer Detection with Edge Devices using YOLOv7 Deep CNN, </b> 4th International Conference on Data Analytics & Management, London Metropolitan University, London, UK. 
+                    <em> Conference: </em> Dhruba Datta, Harsh Prakash, Priya Singh, <b style="color: rgba(46, 56, 64, 0.936);"> Skin Cancer Detection with Edge Devices using YOLOv7 Deep CNN, </b> 4th International Conference on Data Analytics & Management, London Metropolitan University, London, UK. 
                     <h5>Doi: <a href="https://ieeexplore.ieee.org/document/9743283" target="_blank" style="color: rgb(80, 79, 79); text-decoration: underline;">10.1109/JPHOT.2022.3159735</a></h5>  
                   </li>
                   <li> 
-                    <em> Conference: </em> Bhumika Deo, Dhruba Datta, Sanjay Patidar, <b> Monkeypox Disease Detection using Hybrid
+                    <em> Conference: </em> Bhumika Deo, Dhruba Datta, Sanjay Patidar, <b style="color: rgba(46, 56, 64, 0.936);"> Monkeypox Disease Detection using Hybrid
                       Transfer Learning Technique/Mode, </b> London Metropolitan University, London, UK. 
                     <h5>Doi: <a href="https://ieeexplore.ieee.org/document/9743283" target="_blank" style="color: rgb(80, 79, 79); text-decoration: underline;">10.1109/JPHOT.2022.3159735</a></h5>
                   </li>
                   <li> 
-                    <em> Journal: </em> Dhruba Datta, Harsh Prakash, Priya Singh, <b> Skin Cancer Detection with Edge Devices using YOLOv7 Deep CNN, </b> Journal of Photonic Materials and Technology, IEEE. 
+                    <em> Journal: </em> Dhruba Datta, Harsh Prakash, Priya Singh, <b style="color: rgba(46, 56, 64, 0.936);"> Skin Cancer Detection with Edge Devices using YOLOv7 Deep CNN, </b> Journal of Photonic Materials and Technology, IEEE. 
                     <h5>Doi: <a href="https://ieeexplore.ieee.org/document/9743283" target="_blank" style="color: rgb(80, 79, 79); text-decoration: underline;">10.1109/JPHOT.2022.3159735</a></h5>
                   </li>
                 </ul>
