beautified and removed all extra line of codes

--- a/index.html
+++ b/index.html
@@ -152,19 +152,6 @@
       </div>
     </section>
 
-    <!-- ======= Facts Section ======= -->
-    <!-- <section id="facts" class="facts">
-        <div class="container" data-aos="fade-up">
-        <div class="section-title"> <h2>Facts</h2> <p> Learning new things always fun if you enjoy it. Here I'll track my activities as well as improve myself. </p> </div>
-        <div class="row">
-          <div class="col-lg-3 col-md-6"> <div class="count-box"> <i class="icofont-tick-boxed"></i> <span data-toggle="counter-up">421</span> <p>Problem Solved</p> </div> </div>
-          <div class="col-lg-3 col-md-6 mt-5 mt-md-0"> <div class="count-box"> <i class="icofont-atom"></i> <span data-toggle="counter-up">8</span> <p>Total Projects</p> </div> </div>
-          <div class="col-lg-3 col-md-6 mt-5 mt-lg-0"> <div class="count-box"> <i class="icofont-code-alt"></i> <span data-toggle="counter-up">6</span> <p>Coding Languages</p> </div> </div>
-          <div class="col-lg-3 col-md-6 mt-5 mt-lg-0"> <div class="count-box"> <i class="icofont-users-alt-5"></i> <span data-toggle="counter-up">18</span> <p>Coding Competiton</p> </div> </div>
-        </div>
-        </div>
-      </section> -->
-
     <!-- ======= Skill Section ======= -->
     <section id="skill" class="skill">
       <div class="container" data-aos="fade-up">
@@ -218,8 +205,7 @@
                   d="M300,521.0016835830174C376.1290562159157,517.8887921683347,466.0731472004068,529.7835943286574,510.70327084640275,468.03025145048787C554.3714126377745,407.6079735673963,508.03601936045806,328.9844924480964,491.2728898941984,256.3432110539036C474.5976632858925,184.082847569629,479.9380746630129,96.60480741107993,416.23090153303,58.64404602377083C348.86323505073057,18.502131276798302,261.93793281208167,40.57373210992963,193.5410806939664,78.93577620505333C130.42746243093433,114.334589627462,98.30271207620316,179.96522072025542,76.75703585869454,249.04625023123273C51.97151888228291,328.5150500222984,13.704378332031375,421.85034740162234,66.52175969318436,486.19268352777647C119.04800174914682,550.1803526380478,217.28368757567262,524.383925680826,300,521.0016835830174">
                 </path> </img>
               </div>
-              <h4><a href="https://medium.com/@dhruba-datta"
-                  target="_blank">Blog Writing</a></h4>
+              <h4><a href="https://medium.com/@dhruba-datta" target="_blank">Blog Writing</a></h4>
               <p>Explore the latest trends in technology and write variety of articles on Medium</p>
             </div>
           </div>
@@ -304,7 +290,8 @@
               <h4>Mentor</h4>
               <h5>December 2018 - July 2019</h5>
               <p> <em>Dhaka, Bangladesh</em> </p>
-              <p>While applying for higher education, I assisted high school students of 10<sup>th</sup> and 12<sup>th</sup> grade in subjects
+              <p>While applying for higher education, I assisted high school students of 10<sup>th</sup> and
+                12<sup>th</sup> grade in subjects
                 including Maths, Physics, and ICT. </p>
             </div>
             <div class="resume-item">
@@ -330,12 +317,15 @@
             <div class="resume-item">
               <h4>Achievements</h4>
               <ul>
-                <li>Recipient of Indian Council for Cultural Relations  <b style="color: rgba(46, 56, 64, 0.936);">Government Scholarship</b>, provides cost-free
+                <li>Recipient of Indian Council for Cultural Relations <b
+                    style="color: rgba(46, 56, 64, 0.936);">Government Scholarship</b>, provides cost-free
                   education & monthly stipend. </li>
-                <li>Having a personal portfolio  <b style="color: rgba(46, 56, 64, 0.936);">ranked on Google</b>. </li>
-                <li>LeetCode Reputation of  <b style="color: rgba(46, 56, 64, 0.936);">2.8K+ </b> with over  <b style="color: rgba(46, 56, 64, 0.936);">150K+ </b> views. </li>
-                <li>Awarded certificates of excellence in the "<b style="color: rgba(46, 56, 64, 0.936);">DRMC National Science Festival</b>" and "<b style="color: rgba(46, 56, 64, 0.936);">SGHS Inter School
-                  Science Festival</b>". </li>
+                <li>Having a personal portfolio <b style="color: rgba(46, 56, 64, 0.936);">ranked on Google</b>. </li>
+                <li>LeetCode Reputation of <b style="color: rgba(46, 56, 64, 0.936);">2.8K+ </b> with over <b
+                    style="color: rgba(46, 56, 64, 0.936);">150K+ </b> views. </li>
+                <li>Awarded certificates of excellence in the "<b style="color: rgba(46, 56, 64, 0.936);">DRMC National
+                    Science Festival</b>" and "<b style="color: rgba(46, 56, 64, 0.936);">SGHS Inter School
+                    Science Festival</b>". </li>
               </ul>
             </div>
           </div>
@@ -403,17 +393,6 @@
             </div>
           </div>
           <!-- project 04 -->
-          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-              <div class="portfolio-wrap"> <img src="img/project/project4.webp" class="img-fluid" alt="dhruba datta" />
-              <div class="portfolio-info"> <h4>Leetcode</h4>
-              <div class="portfolio-links">
-                <a href="https://leetcode.com/dhruba-datta/" target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external" title="Leetcode Profile"><i class="bx bx-link"></i></a>
-                <a href="https://dhrubadatta.notion.site/Leetcode-2022-a361e7ae64304d6ea91b2d41a3d5bed9" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Solutions"><i class="bx bx-file-blank"></i></a>
-              </div>
-              </div>
-              </div>
-            </div> -->
-          <!-- project 05 -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap"> <img src="img/project/project5.webp" class="img-fluid" alt="dhruba datta" />
               <div class="portfolio-info">
@@ -428,18 +407,7 @@
               </div>
             </div>
           </div>
-          <!-- project 06 -->
-          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-              <div class="portfolio-wrap"> <img src="img/project/project6.webp" class="img-fluid" alt="dhruba datta" />
-              <div class="portfolio-info"> <h4>Follow me for future updates</h4>
-              <div class="portfolio-links">
-                <a href="https://www.instagram.com/dhrubz_/" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="https://www.youtube.com/c/DhrubaDattaAnjan" target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external" title="YouTube"><i class="bx bxl-youtube"></i></a>
-              </div>
-              </div>
-              </div>
-            </div> -->
-          <!-- project 07 -->
+          <!-- project 05 -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap"> <img src="img/project/project7.webp" class="img-fluid" alt="dhruba datta" />
               <div class="portfolio-info">
@@ -451,7 +419,7 @@
               </div>
             </div>
           </div>
-          <!-- project 08 -->
+          <!-- project 06 -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap"> <img src="img/project/project8.webp" class="img-fluid" alt="dhruba datta" />
               <div class="portfolio-info">
@@ -464,16 +432,6 @@
               </div>
             </div>
           </div>
-          <!-- project 09 -->
-          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-              <div class="portfolio-wrap"> <img src="img/project/project9.webp" class="img-fluid" alt="dhruba datta" />
-              <div class="portfolio-info"> <h4>Join Discord Server</h4>
-              <div class="portfolio-links">
-                <a href="https://discord.gg/zazf3BgJK7" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Discord"> <i class='bx bxl-discord'></i> </a>
-              </div>
-              </div>
-              </div>
-            </div> -->
         </div>
       </div>
     </section>
