--- a/index.html
+++ b/index.html
@@ -469,18 +469,17 @@
               <div class="col-lg-12 col-md-12 icon-box" data-aos="fade-up">
                 <div class="icon"><i class="bi bi-card-text"></i></div>
 
+                <p class="description"><em>[23.04.2023]</em> </p>
+                <h5 class="title">
+                  My first research paper, titled "Skin Cancer Detection with Edge Devices using YOLOv7 Deep CNN" got accepted in the conference.
+                </h5> <br>
+
                 <p class="description"><em>[18.09.2022]</em> </p>
                 <h5 class="title">
                   My portfolio got ranked on Google.
                   <em><a
                       href="https://www.google.com/search?q=dhruba+datta&rlz=1C1BNSD_enBD976BD976&oq=dhruba+datta&aqs=chrome.0.69i59j35i39j0i10i22i30j69i65l2j69i60j69i65.2690j0j7&sourceid=chrome&ie=UTF-8"
                       target="_blank">[check here]</a></em>
-                </h5> <br>
-
-                <p class="description"><em>[10.06.2022]</em> </p>
-                <h5 class="title">
-                  More than 500 people have joined my discord server for coding-related help and guidance.
-                  <em><a href="https://discord.gg/zazf3BgJK7" target="_blank">[join server]</a></em>
                 </h5> <br>
 
                 <p class="description"><em>[14.07.2019]</em> </p>
