--- a/index.html
+++ b/index.html
@@ -260,19 +260,19 @@
               <h4>Bachelor of Technology (B.Tech)</h4>
               <h5>August 2019 - Present</h5>
               <p><em>Delhi Technological University, New Delhi, India</em></p>
-              <h6>CGPA: 8.14/10.00 (Software Engineering)</h6>
+              <h6>CGPA: 8.14/10.00 [Software Engineering]</h6>
             </div>
             <div class="resume-item">
               <h4>Higher Secondary Certificate (HSC)</h4>
               <h5>April 2016 - August 2018</h5>
               <p><em>Dhaka College, Dhaka, Bangladesh</em></p>
-              <h6>GPA: 5.00/5.00 (Science)</h6>
+              <h6>GPA: 5.00/5.00 [Science]</h6>
             </div>
             <div class="resume-item">
               <h4>Secondary School Certificate (SSC)</h4>
               <h5>January 2006 - March 2016</h5>
               <p><em>St. Gregory's High School, Dhaka, Bangladesh</em></p>
-              <h6>GPA: 5.00/5.00 (Science)</h6>
+              <h6>GPA: 5.00/5.00 [Science]</h6>
             </div>
             <h3 class="resume-title">Experience</h3>
             <div class="resume-item">
