--- a/temp.html
+++ b/temp.html
@@ -19,7 +19,7 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Bachelor of Technology (B.Tech)</h4>
-              <h5>August 2019 - Present</h5>
+              <h5>August 2019 - June 2023</h5>
               <p><em>Delhi Technological University, New Delhi, India</em></p>
               <h6>CGPA: 8.14/10.00 [Software Engineering]</h6>
             </div>
@@ -43,30 +43,30 @@
               <h4>Conference </h4>
               <ul>
                 <li>
+                  <h5>Status: [Accepted - 23<sup>rd</sup> April, 2023]</h5> <br>
                   <em> Dhruba Datta, Harsh Prakash, Priya Singh, </em> 
                   <b style="color: rgba(46, 56, 64, 0.936);"> Skin Cancer Detection with Edge Devices using YOLOv7 Deep CNN, </b> 
                   4<sup>th</sup> International Conference on Data Analytics & Management, London, UK. 
                   <br>
-                  <h5>Status: [Accepted - 23<sup>rd</sup> April, 2023]</h5>
                   <!-- <h5>Doi: <a href="https://ieeexplore.ieee.org/document/9743283" target="_blank" style="color: rgb(80, 79, 79); text-decoration: underline;">10.1109/JPHOT.2022.3159735</a></h5> -->
                 </li>
                 <li>
+                  <h5>Status: [Work in progress]</h5> <br>
                   <em> Bhumika Deo, Dhruba Datta, Sanjay Patidar, </em> 
                   <b style="color: rgba(46, 56, 64, 0.936);"> Monkeypox Disease Detection using Hybrid Transfer Learning Technique/Mode, </b> 
                   <!-- 4th International Conference on Data Analytics & Management, London, UK. -->
                   <br>
-                  <h5>Status: [Upcoming]</h5>
                   <!-- <h5>Doi: <a href="https://ieeexplore.ieee.org/document/9743283" target="_blank" style="color: rgb(80, 79, 79); text-decoration: underline;">10.1109/JPHOT.2022.3159735</a></h5> -->
                 </li>
               </ul>
               <h4>Journal </h4>
               <ul>
                 <li>
-                  <em> Meharab Hossain Robin, Zishnendu Sarker, Dhruba Datta, Sristi Mirtra, </em> 
+                  <h5>Status: [Work in progress]</h5> <br>
+                  <em> Meharab Hossain Robin, Zishnendu Sarker, Dhruba Datta, Sristi Mitra, </em> 
                   <b style="color: rgba(46, 56, 64, 0.936);"> Skin Cancer Detection with Edge Devices using YOLOv7 Deep CNN, </b> 
                   <!-- 4th International Conference on Data Analytics & Management, London, UK. -->
                   <br>
-                  <h5>Status: [Upcoming]</h5>
                   <!-- <h5>Doi: <a href="https://ieeexplore.ieee.org/document/9743283" target="_blank" style="color: rgb(80, 79, 79); text-decoration: underline;">10.1109/JPHOT.2022.3159735</a></h5> -->
                 </li>
               </ul>
