--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <p class="font-weight-normal">
             <h3> Hey there! </h3>
             I'm an undergraduate student at Delhi Technological University (DTU), pursuing a B.Tech degree in Software
-            Engineering. My skillset includes experience in data structure & algorithms, front-end development, UI/UX
+            Engineering. My skillset includes experience in data structure & algorithms, front-end development, Ui/Ux
             design and machine learning. I also have a passion for photography, videography and reading books. With a
             diverse set of technical and creative skills, I'm eager to apply my knowledge to tackle new challenges and
             make meaningful contributions.
@@ -248,7 +248,7 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Dhruba Datta</h4>
-              <p> A software engineering student skilled in data structure & algorithms, front-end development & UI/UX
+              <p> A software engineering student skilled in data structure & algorithms, front-end development & Ui/Ux
                 design, continuously expanding knowledge through learning new technologies. </p>
               <ul>
                 <li>Hometown: Dhaka, Bangladesh</li>
@@ -280,7 +280,7 @@
               <h5>June 2022 - July 2022</h5>
               <p> <em>Dhaka, Bangladesh</em> </p>
               <h6>Web Developer Intern</h6>
-              <p>UI/UX and front-end development experience in design & development of micro websites, landing pages and
+              <p>Ui/Ux and front-end development experience in design & development of micro websites, landing pages and
                 web apps. </p>
             </div>
           </div>
@@ -310,7 +310,7 @@
                 <li>Frameworks: ReactJS, Tailwind, Bootstrap, NodeJS.</li>
                 <li>Database: MongoDB, MySQL, Sanity.</li>
                 <li>Cloud Platforms: Heroku, GitHub, Netlify.</li>
-                <li>Additional Skills: SEO, UI/UX Design, Video/Photo Editing.</li>
+                <li>Additional Skills: SEO, Ui/Ux Design, Video/Photo Editing.</li>
                 <li>Fluently speak 3 Languages: English, Bengali, Hindi.</li>
               </ul>
             </div>
