--- a/temp.html
+++ b/temp.html
@@ -9,7 +9,7 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Dhruba Datta</h4>
-              <p> A software engineering student skilled in data structure & algorithms, front-end development & UI/UX
+              <p> A software engineering student skilled in data structure & algorithms, front-end development & Ui/Ux
                 design, continuously expanding knowledge through learning new technologies. </p>
               <ul>
                 <li>Hometown: Dhaka, Bangladesh</li>
@@ -112,7 +112,7 @@
               <h5>June 2022 - July 2022</h5>
               <p> <em>Dhaka, Bangladesh</em> </p>
               <h6>Web Developer Intern</h6>
-              <p>UI/UX and front-end development experience in design & development of micro websites, landing pages and
+              <p>Ui/Ux and front-end development experience in design & development of micro websites, landing pages and
                 web apps. </p>
             </div>
             <h3 class="resume-title">Skills</h3>
@@ -123,7 +123,7 @@
                 <li>Frameworks: ReactJS, Tailwind, Bootstrap, NodeJS.</li>
                 <li>Database: MongoDB, MySQL, Sanity.</li>
                 <li>Cloud Platforms: Heroku, GitHub, Netlify.</li>
-                <li>Additional Skills: SEO, UI/UX Design, Video/Photo Editing.</li>
+                <li>Additional Skills: SEO, Ui/Ux Design, Video/Photo Editing.</li>
                 <li>Fluently speak 3 Languages: English, Bengali, Hindi.</li>
               </ul>
             </div>
