--- a/temp.html
+++ b/temp.html
@@ -48,7 +48,7 @@
                   <b style="color: rgba(46, 56, 64, 0.936);"> Skin Cancer Detection with Edge Devices using YOLOv7 Deep CNN, </b> 
                   4<sup>th</sup> International Conference on Data Analytics & Management, London, UK. 
                   <br>
-                  <!-- <h5>Doi: <a href="https://ieeexplore.ieee.org/document/9743283" target="_blank" style="color: rgb(80, 79, 79); text-decoration: underline;">10.1109/JPHOT.2022.3159735</a></h5> -->
+                  <!-- <h5 style="color: black;">Doi: <a href="https://ieeexplore.ieee.org/document/9743283" target="_blank">10.1109/JPHOT.2022.3159735</a></h5> -->
                 </li>
                 <li>
                   <h5>Status: [Work in progress]</h5> <br>
@@ -56,7 +56,7 @@
                   <b style="color: rgba(46, 56, 64, 0.936);"> Monkeypox Disease Detection using Hybrid Transfer Learning Technique/Mode, </b> 
                   <!-- 4th International Conference on Data Analytics & Management, London, UK. -->
                   <br>
-                  <!-- <h5>Doi: <a href="https://ieeexplore.ieee.org/document/9743283" target="_blank" style="color: rgb(80, 79, 79); text-decoration: underline;">10.1109/JPHOT.2022.3159735</a></h5> -->
+                  <!-- <h5 style="color: black;">Doi: <a href="https://ieeexplore.ieee.org/document/9743283" target="_blank">10.1109/JPHOT.2022.3159735</a></h5> -->
                 </li>
               </ul>
               <h4>Journal </h4>
@@ -67,7 +67,7 @@
                   <b style="color: rgba(46, 56, 64, 0.936);"> Skin Cancer Detection with Edge Devices using YOLOv7 Deep CNN, </b> 
                   <!-- 4th International Conference on Data Analytics & Management, London, UK. -->
                   <br>
-                  <!-- <h5>Doi: <a href="https://ieeexplore.ieee.org/document/9743283" target="_blank" style="color: rgb(80, 79, 79); text-decoration: underline;">10.1109/JPHOT.2022.3159735</a></h5> -->
+                  <!-- <h5 style="color: black;">Doi: <a href="https://ieeexplore.ieee.org/document/9743283" target="_blank">10.1109/JPHOT.2022.3159735</a></h5> -->
                 </li>
               </ul>
             </div>
