updated as I almost graduated

--- a/index.html
+++ b/index.html
@@ -100,12 +100,11 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <p class="font-weight-normal">
             <h3> Hey there! </h3>
-            I'm an undergraduate student at Delhi Technological University (DTU), pursuing a B.Tech degree in Software
-            Engineering. My skillset includes experience in data structure & algorithms, front-end development, Ui/Ux
+            I graduated from Delhi Technological University (DTU) with a B.Tech degree in Software Engineering. My
+            skillset includes experience in data structure & algorithms, front-end development, Ui/Ux
             design and machine learning. I also have a passion for photography, videography and reading books. With a
             diverse set of technical and creative skills, I'm eager to apply my knowledge to tackle new challenges and
             make meaningful contributions.
-            <!-- I have completed my Bachelor's degree in Software Engineering from Delhi Technological University (DTU). -->
             </p> <br>
             <div class="row">
               <div class="col-lg-6">
@@ -248,8 +247,10 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Dhruba Datta</h4>
-              <p> A software engineering student skilled in data structure & algorithms, front-end development & Ui/Ux
-                design, continuously expanding knowledge through learning new technologies. </p>
+              <p>
+                A software engineering graduate skilled in data structure and algorithms, front-end development, Ui/Ux
+                design and continuously expanding knowledge through learning new technologies.
+              </p>
               <ul>
                 <li>Hometown: Dhaka, Bangladesh</li>
                 <li>Email: dhrubadattaanjan@gmail.com</li>
@@ -258,7 +259,7 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Bachelor of Technology (B.Tech)</h4>
-              <h5>August 2019 - Present</h5>
+              <h5>August 2019 - June 2023</h5>
               <p><em>Delhi Technological University, New Delhi, India</em></p>
               <h6>CGPA: 8.14/10.00 [Software Engineering]</h6>
             </div>
@@ -471,7 +472,8 @@
 
                 <p class="description"><em>[23.04.2023]</em> </p>
                 <h5 class="title">
-                  My first research paper, titled "Skin Cancer Detection with Edge Devices using YOLOv7 Deep CNN" got accepted in the conference.
+                  My first research paper, titled "Skin Cancer Detection with Edge Devices using YOLOv7 Deep CNN" got
+                  accepted in the conference.
                 </h5> <br>
 
                 <p class="description"><em>[18.09.2022]</em> </p>
