--- a/temp.html
+++ b/temp.html
@@ -9,8 +9,8 @@
         <h3 class="resume-title">Summary</h3>
         <div class="resume-item pb-0">
           <h4>Dhruba Datta</h4>
-          <p> A software engineering student skilled in data structure & algorithms, front-end development & Ui/Ux
-            design, continuously expanding knowledge through learning new technologies. </p>
+          <p> A software engineering graduate skilled in data structure and algorithms, front-end development, Ui/Ux
+            design and continuously expanding knowledge through learning new technologies. </p>
           <ul>
             <li>Hometown: Dhaka, Bangladesh</li>
             <li>Email: dhrubadattaanjan@gmail.com</li>
