--- a/temp.html
+++ b/temp.html
@@ -106,7 +106,7 @@
           <h4>XYZ company</h4>
           <h5>June 2023 - Present</h5>
           <p> <em>Dhaka, Bangladesh</em> </p>
-          <h6>Web Developer Intern</h6>
+          <h6>Software Engineer</h6>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, vitae commodi .</p>
         </div>
         <div class="resume-item">
@@ -134,13 +134,13 @@
         <h3 class="resume-title">Volunteer</h3>
         <div class="resume-item">
           <h4>Prothom Alo Bondhushava</h4>
-          <h5>December 2022 - July 2023</h5>
+          <h5>January 2023 - May 2023</h5>
           <p> <em>New Delhi, India</em> </p>
           <p>Co cultural activities with Prothom Alo Bondhushava </p>
         </div>
         <div class="resume-item">
           <h4>Dhrubotara Youth Development Foundation</h4>
-          <h5>May 2017 - July 2019</h5>
+          <h5>May 2017 - June 2019</h5>
           <p> <em>New Delhi, India</em> </p>
           <p>Co-founded a group aimed to help and support street children, providing basic needs such as food &
             education for over hundred children with a team of more than fifty members. </p>
