--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <p class="font-weight-normal">
             <h3> Hey there! </h3>
-            I graduated from Delhi Technological University (DTU) with a B.Tech degree in Software Engineering. My
-            skillset includes experience in data structure & algorithms, front-end development, Ui/Ux
+            I graduated from Delhi Technological University (DTU) with a B.Tech degree in Software Engineering. During my time at DTU, I pursued my undergraduate studies and developed a strong skillset in various areas such as data structure & algorithms, front-end development, Ui/Ux
             design and machine learning. I also have a passion for photography, videography and reading books. With a
             diverse set of technical and creative skills, I'm eager to apply my knowledge to tackle new challenges and
             make meaningful contributions.
