--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <p class="font-weight-bold"> Hello, I'm </p>
       <h1>DHRUBA DATTA</h1>
       <p class="font-weight-bold"> I'm a <span class="typed"
-          data-typed-items="Software Engineering Graduate, Scholarship Recipient, Web Developer, Graphic Designer, Competitive Coder, Photographer, Content Creator"></span>
+          data-typed-items="Software Engineer, Scholarship Recipient, Web Developer, Graphic Designer, Competitive Coder, Photographer, Content Creator"></span>
       </p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/dhruba-datta/" target="_blank" class="linkedin"><i
