--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <p class="font-weight-normal">
             <h3> Hey there! </h3>
-            I graduated from Delhi Technological University (DTU) with a B.Tech degree in Software Engineering. During my time at DTU, I pursued my undergraduate studies and developed a strong skillset in various areas such as data structure & algorithms, front-end development, Ui/Ux
+            I graduated from Delhi Technological University (DTU) with a B.Tech degree in Software Engineering. During
+            my time at DTU, I pursued my undergraduate studies and developed a strong skillset in various areas such as
+            data structure & algorithms, front-end development, Ui/Ux
             design and machine learning. I also have a passion for photography, videography and reading books. With a
             diverse set of technical and creative skills, I'm eager to apply my knowledge to tackle new challenges and
             make meaningful contributions.
@@ -246,10 +248,8 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Dhruba Datta</h4>
-              <p>
-                A software engineering graduate skilled in data structure and algorithms, front-end development, Ui/Ux
-                design and continuously expanding knowledge through learning new technologies.
-              </p>
+              <p> A software engineering graduate skilled in data structure and algorithms, front-end development, Ui/Ux
+                design and continuously expanding knowledge through learning new technologies. </p>
               <ul>
                 <li>Hometown: Dhaka, Bangladesh</li>
                 <li>Email: dhrubadattaanjan@gmail.com</li>
@@ -274,36 +274,88 @@
               <p><em>St. Gregory's High School, Dhaka, Bangladesh</em></p>
               <h6>GPA: 5.00/5.00 [Science]</h6>
             </div>
-            <h3 class="resume-title">Experience</h3>
+
+          </div>
+          <div class="col-lg-6">
+            <h3 class="resume-title">Publications</h3>
+            <div class="resume-item">
+              <h4>Conference </h4>
+              <ul>
+                <li>
+                  <h5>Status: [Accepted - 23<sup>rd</sup> April, 2023]</h5> <br>
+                  <em> Dhruba Datta, Harsh Prakash, Priya Singh, </em>
+                  <b style="color: rgba(46, 56, 64, 0.936);"> Skin Cancer Detection with Edge Devices using YOLOv7 Deep
+                    CNN,
+                  </b>
+                  4<sup>th</sup> International Conference on Data Analytics & Management [ICDAM-2023], London
+                  Metropolitan University, London, UK.
+                  <br>
+                  <!-- <h5 style="color: black;">Doi: <a href="https://ieeexplore.ieee.org/document/9743283" target="_blank">10.1109/JPHOT.2022.3159735</a></h5> -->
+                </li>
+                <br>
+                <li>
+                  <h5>Status: [Work in progress]</h5> <br>
+                  <em> Bhumika Deo, Dhruba Datta, Sanjay Patidar, </em>
+                  <b style="color: rgba(46, 56, 64, 0.936);"> Monkeypox Disease Detection using Hybrid Transfer Learning
+                    Technique/Mode, </b>
+                  <!-- 4th International Conference on Data Analytics & Management, London, UK. -->
+                  <br>
+                  <!-- <h5 style="color: black;">Doi: <a href="https://ieeexplore.ieee.org/document/9743283" target="_blank">10.1109/JPHOT.2022.3159735</a></h5> -->
+                </li>
+              </ul>
+
+            </div>
+            <h3 class="resume-title">Achievements</h3>
+            <div class="resume-item">
+              <ul>
+                <li>Received the prestigious Indian Council for Cultural Relations <b
+                    style="color: rgba(46, 56, 64, 0.936);">Government
+                    Scholarship</b>, entailing cost-free education and a monthly stipend.</li>
+                <li>Attained a personal portfolio that <b style="color: rgba(46, 56, 64, 0.936);">ranked on Google</b>.
+                </li>
+                <li>Achieving a LeetCode Reputation of <b style="color: rgba(46, 56, 64, 0.936);">2.8K+ </b> and
+                  captivating over <b style="color: rgba(46, 56, 64, 0.936);">150K </b> views, captivating coding
+                  enthusiasts worldwide. </li>
+                <li>Achieved the establishment and growth of a coding channel on <b
+                    style="color: rgba(46, 56, 64, 0.936);">Discord</b>, surpassing <b
+                    style="color: rgba(46, 56, 64, 0.936);">500 members</b>. </li>
+                <li>Awarded certificates of excellence in the "<b style="color: rgba(46, 56, 64, 0.936);">DRMC National
+                    Science Festival</b>" and "<b style="color: rgba(46, 56, 64, 0.936);">SGHS Inter School
+                    Science Festival</b>". </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ======= Experience Section ======= -->
+    <section id="resume" class="resume">
+      <div class="container" data-aos="fade-up">
+        <div class="section-title">
+          <h2>Experience</h2>
+        </div>
+        <div class="row">
+          <div class="col-lg-6">
+            <h3 class="resume-title">Professional</h3>
+            <!-- <div class="resume-item">
+          <h4>XYZ company</h4>
+          <h5>June 2023 - Present</h5>
+          <p> <em>Dhaka, Bangladesh</em> </p>
+          <h6>Software Engineer</h6>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, vitae commodi .</p>
+        </div> -->
             <div class="resume-item">
               <h4>Revinns Limited</h4>
               <h5>June 2022 - July 2022</h5>
               <p> <em>Dhaka, Bangladesh</em> </p>
               <h6>Web Developer Intern</h6>
-              <p>Ui/Ux and front-end development experience in design & development of micro websites, landing pages and
-                web apps. </p>
+              <p>
+                Had experience in Ui/Ux and front-end development, specialising in the design and development of microsites, landing pages and different web applications.
+              </p>
             </div>
-          </div>
-          <div class="col-lg-6">
-            <h3 class="resume-title">Volunteering</h3>
+            <h3 class="resume-title">Skills</h3>
             <div class="resume-item">
-              <h4>Mentor</h4>
-              <h5>December 2018 - July 2019</h5>
-              <p> <em>Dhaka, Bangladesh</em> </p>
-              <p>While applying for higher education, I assisted high school students of 10<sup>th</sup> and
-                12<sup>th</sup> grade in subjects
-                including Maths, Physics, and ICT. </p>
-            </div>
-            <div class="resume-item">
-              <h4>Help Bangladesh</h4>
-              <h5>May 2017 - July 2019</h5>
-              <p> <em>Dhaka, Bangladesh</em> </p>
-              <p>Co-founded a group aimed to help and support street children, providing basic needs such as food &
-                education for over hundred children with a team of more than fifty members. </p>
-            </div>
-            <h3 class="resume-title">Others</h3>
-            <div class="resume-item">
-              <h4>Skills</h4>
               <ul>
                 <li>Technical Skills: Front-end Development.</li>
                 <li>Programming Languages: C, C++, Python, JavaScript.</li>
@@ -314,19 +366,37 @@
                 <li>Fluently speak 3 Languages: English, Bengali, Hindi.</li>
               </ul>
             </div>
+          </div>
+          <div class="col-lg-6">
+            <h3 class="resume-title">Volunteer</h3>
+            <!-- <div class="resume-item">
+          <h4>Prothom Alo Bondhushava</h4>
+          <h5>January 2023 - May 2023</h5>
+          <p> <em>New Delhi, India</em> </p>
+          <p>Co cultural activities with Prothom Alo Bondhushava </p>
+        </div> -->
             <div class="resume-item">
-              <h4>Achievements</h4>
-              <ul>
-                <li>Recipient of Indian Council for Cultural Relations <b
-                    style="color: rgba(46, 56, 64, 0.936);">Government Scholarship</b>, provides cost-free
-                  education & monthly stipend. </li>
-                <li>Having a personal portfolio <b style="color: rgba(46, 56, 64, 0.936);">ranked on Google</b>. </li>
-                <li>LeetCode Reputation of <b style="color: rgba(46, 56, 64, 0.936);">2.8K+ </b> with over <b
-                    style="color: rgba(46, 56, 64, 0.936);">150K+ </b> views. </li>
-                <li>Awarded certificates of excellence in the "<b style="color: rgba(46, 56, 64, 0.936);">DRMC National
-                    Science Festival</b>" and "<b style="color: rgba(46, 56, 64, 0.936);">SGHS Inter School
-                    Science Festival</b>". </li>
-              </ul>
+              <h4>Dhrubotara Youth Development Foundation</h4>
+              <h5>May 2017 - June 2019</h5>
+              <p> <em>New Delhi, India</em> </p>
+              <p>DYDF-INDIA combines student power of Bangladesh and India and works on skill development and social
+                issues of both countries. </p>
+            </div>
+            <div class="resume-item">
+              <h4>Mentor</h4>
+              <h5>December 2018 - July 2019</h5>
+              <p> <em>Dhaka, Bangladesh</em> </p>
+              <p>While applying for higher education, I assisted high school students of 10<sup>th</sup> and
+                12<sup>th</sup>
+                grade in subjects
+                including Maths, Physics, and ICT. </p>
+            </div>
+            <div class="resume-item">
+              <h4>Help Bangladesh</h4>
+              <h5>May 2017 - July 2019</h5>
+              <p> <em>Dhaka, Bangladesh</em> </p>
+              <p>Co-founded a group aimed to help and support street children, providing basic needs such as food &
+                education for over hundred children with a team of more than fifty members. </p>
             </div>
           </div>
         </div>
