--- a/index.html
+++ b/index.html
@@ -248,8 +248,10 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Dhruba Datta</h4>
-              <p> A software engineering graduate skilled in data structure and algorithms, front-end development, Ui/Ux
-                design and continuously expanding knowledge through learning new technologies. </p>
+              <p>
+                A software engineering graduate skilled in data structure and algorithms, front-end development, Ui/Ux
+                design and continuously expanding knowledge through learning new technologies.
+              </p>
               <ul>
                 <li>Hometown: Dhaka, Bangladesh</li>
                 <li>Email: dhrubadattaanjan@gmail.com</li>
@@ -285,8 +287,7 @@
                   <h5>Status: [Accepted - 23<sup>rd</sup> April, 2023]</h5> <br>
                   <em> Dhruba Datta, Harsh Prakash, Priya Singh, </em>
                   <b style="color: rgba(46, 56, 64, 0.936);"> Skin Cancer Detection with Edge Devices using YOLOv7 Deep
-                    CNN,
-                  </b>
+                    CNN,</b>
                   4<sup>th</sup> International Conference on Data Analytics & Management [ICDAM-2023], London
                   Metropolitan University, London, UK.
                   <br>
@@ -351,7 +352,8 @@
               <p> <em>Dhaka, Bangladesh</em> </p>
               <h6>Web Developer Intern</h6>
               <p>
-                Had experience in Ui/Ux and front-end development, specialising in the design and development of microsites, landing pages and different web applications.
+                Had experience in Ui/Ux and front-end development, specialising in the design and development of
+                microsites, landing pages and different web applications.
               </p>
             </div>
             <h3 class="resume-title">Skills</h3>
@@ -370,14 +372,14 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Volunteer</h3>
             <!-- <div class="resume-item">
-          <h4>Prothom Alo Bondhushava</h4>
-          <h5>January 2023 - May 2023</h5>
-          <p> <em>New Delhi, India</em> </p>
-          <p>Co cultural activities with Prothom Alo Bondhushava </p>
-        </div> -->
+              <h4>Prothom Alo Bondhushava</h4>
+              <h5>June 2022 - May 2023</h5>
+              <p> <em>New Delhi, India</em> </p>
+              <p>Co cultural activities with Prothom Alo Bondhushava </p>
+            </div> -->
             <div class="resume-item">
               <h4>Dhrubotara Youth Development Foundation</h4>
-              <h5>May 2017 - June 2019</h5>
+              <h5>May 2021 - June 2022</h5>
               <p> <em>New Delhi, India</em> </p>
               <p>DYDF-INDIA combines student power of Bangladesh and India and works on skill development and social
                 issues of both countries. </p>
