--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>Dhruba Datta | Portfolio</title>
   <meta
-    content="I'm Dhruba, recent graduate in Software Engineering (SE) from Delhi Technological University (DTU). Join me to unlock the potential of cutting-edge software development and stay at the forefront of the tech industry. Let's connect for an innovative journey!"
+    content="Dhruba, SE graduate from DTU. Join to unlock cutting-edge software development and stay at the forefront of tech. Let us connect for an innovative journey!"
     name="description" />
   <meta
     content="Dhruba, Dhruba Datta, Dhruba Datta Anjan, Dhrubo, Dhrubo Datta, Dhrubo Datta Anjan, Dhruba Dutta, Dhruba Dutta Anjan, Dhruv, Dhruv Dutta, Dhruv Datta, DhrubaDattaAnjan, dhruba_datta_anjan, dhruba-datta-anjan, dhruba-datta, dhruba_anjan, Anjan, portfolio, personal website, website, dhaka, bangladesh, DTU, delhi, Delhi Technological University"
