removed all the inline css

--- a/index.html
+++ b/index.html
@@ -286,8 +286,7 @@
                 <li>
                   <h5>Status: [Accepted - 23<sup>rd</sup> April, 2023]</h5> <br>
                   <em> Dhruba Datta, Harsh Prakash, Priya Singh, </em>
-                  <b style="color: rgba(46, 56, 64, 0.936);"> Skin Cancer Detection with Edge Devices using YOLOv7 Deep
-                    CNN,</b>
+                  <b> Skin Cancer Detection with Edge Devices using YOLOv7 Deep CNN,</b>
                   4<sup>th</sup> International Conference on Data Analytics & Management [ICDAM-2023], London
                   Metropolitan University, London, UK.
                   <br>
@@ -297,9 +296,9 @@
                 <li>
                   <h5>Status: [Work in progress]</h5> <br>
                   <em> Bhumika Deo, Dhruba Datta, Sanjay Patidar, </em>
-                  <b style="color: rgba(46, 56, 64, 0.936);"> Monkeypox Disease Detection using Hybrid Transfer Learning
-                    Technique/Mode, </b>
-                  <!-- 4th International Conference on Data Analytics & Management, London, UK. -->
+                  <b> Monkeypox Disease Detection using Hybrid Transfer Learning Technique/Mode, </b>
+                  <!-- 4<sup>th</sup> International Conference on Data Analytics & Management [ICDAM-2023], London
+                  Metropolitan University, London, UK. -->
                   <br>
                   <!-- <h5 style="color: black;">Doi: <a href="https://ieeexplore.ieee.org/document/9743283" target="_blank">10.1109/JPHOT.2022.3159735</a></h5> -->
                 </li>
@@ -309,21 +308,17 @@
             <h3 class="resume-title">Achievements</h3>
             <div class="resume-item">
               <ul>
-                <li>Received the prestigious Indian Council for Cultural Relations <b
-                    style="color: rgba(46, 56, 64, 0.936);">Government
-                    Scholarship</b>, entailing cost-free education and a monthly stipend.</li>
-                <li>Attained a personal portfolio that <b style="color: rgba(46, 56, 64, 0.936);">ranked on Google</b>.
-                </li>
-                <li>Achieving a LeetCode Reputation of <b style="color: rgba(46, 56, 64, 0.936);">2.8K+ </b> and
-                  captivating over <b style="color: rgba(46, 56, 64, 0.936);">150K </b> views, captivating coding
-                  enthusiasts worldwide. </li>
-                <li>Achieved the establishment and growth of a coding channel on <b
-                    style="color: rgba(46, 56, 64, 0.936);">Discord</b>, surpassing <b
-                    style="color: rgba(46, 56, 64, 0.936);">500 members</b>. </li>
-                <li>Awarded certificates of excellence in the "<b style="color: rgba(46, 56, 64, 0.936);">DRMC National
-                    Science Festival</b>" and "<b style="color: rgba(46, 56, 64, 0.936);">SGHS Inter School
-                    Science Festival</b>". </li>
+                <li>Received the prestigious Indian Council for Cultural Relations <b>Government Scholarship</b>,
+                  entailing cost-free education and a monthly stipend.</li>
+                <li>Attained a personal portfolio that <b>ranked on Google</b>.</li>
+                <li>Achieving a LeetCode Reputation of <b>2.8K+</b> and captivating over <b>150K</b> views, captivating
+                  coding enthusiasts worldwide.</li>
+                <li>Achieved the establishment and growth of a coding channel on <b>Discord</b>, surpassing <b>500
+                    members</b>.</li>
+                <li>Awarded certificates of excellence in the "<b>DRMC National Science Festival</b>" and "<b>SGHS Inter
+                    School Science Festival</b>".</li>
               </ul>
+
             </div>
           </div>
         </div>
