--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     content="I'm Dhruba, a recent DTU graduate. Join me for cutting-edge software development and stay at the forefront of tech. Let's connect for an innovative journey!"
     name="description" />
   <meta
-    content="Dhruba, Dhruba Datta, Dhruba Datta Anjan, Dhrubo, Dhrubo Datta, Dhrubo Datta Anjan, Dhruba Dutta, Dhruba Dutta Anjan, Dhruv, Dhruv Dutta, Dhruv Datta, DhrubaDattaAnjan, dhruba_datta_anjan, dhruba-datta-anjan, dhruba-datta, dhruba_anjan, Anjan, portfolio, personal website, website, dhaka, bangladesh, DTU, delhi, Delhi Technological University"
+    content="Dhruba, Dhruba Datta, Dhruba Datta Anjan, Dhrubo, Dhrubo Datta, Dhrubo Datta Anjan, Dhruba Dutta, Dhruba Dutta Anjan, Dhruv, Dhruv Dutta, Dhruv Datta, DhrubaDattaAnjan, dhruba_datta_anjan, dhruba-datta-anjan, dhruba-datta, dhruba_anjan, Anjan, portfolio, personal website, website, DTU, Delhi Technological University"
     name="keywords" />
 
   <!-- Open Graph -->
